 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.5rc1

 - [ZBX-886] remove duplicate translation strings (Richlv)
 - [ZBX-3384] fixed server crash in a distributed monitoring setup with PostgreSQL (asaveljevs)
 - [ZBX-3274] fixed SQLite3 semaphore errors while starting server or proxy (Sasha)
 - [ZBXNEXT-614] add Slovak translation; thanks to Marcel Hecko (Richlv)
 - [ZBX-2914] add Ubuntu upstart files; thanks to S. Canchon (Richlv)
 - [ZBX-3381] negative multipliers for items with value type "numeric (float)" are now allowed (KB)
 - [ZBX-1357] updated Japanese translation (Richlv)
 - [ZBX-3385] fixed trigger status change record in audit log (Vedmak)
 - [ZBX-2825] make profiles form redirect to the last visited page on save or cancel (Vlad)
 - [ZBX-3383] fixed error in audit log when filter by Macro or Template (Vedmak)
 - [ZBX-3378] updated Russian translation; thanks to dotneft and zalex_ua (Richlv)
 - [ZBX-3350] fixed minor interface bug and it is now not possible to add host name longer than 64 chars (KB)
 - [ZBX-3341] fixed host export - valuemap property is now exported as expected (KB)
 - [ZBX-3338] updated Ukrainian translation; thanks to zalex_ua (Richlv)
 - [ZBX-954] fix minor typos (Richlv)
 - [ZBX-1419] don't print an informative message during upgrade if no orphan hosts were found (Richlv)

Changes for 1.8.4

1.8.4rc4 was released as 1.8.4 without any changes

Changes for 1.8.4rc4

 - [ZBX-3351] fixed broken support of 1.4.x style configuration file format for WEB interface (Vedmak)

Changes for 1.8.4rc3
