@@ -33,6 +33,8 @@
 		define('ZBX_PAGE_DO_REFRESH', 1);
 	}
 
+	define('GET_PARAM_NAME', 'mapname');
+
 include_once('include/page_header.php');
 
 // js templates
@@ -42,8 +44,9 @@ require_once('include/templates/scriptConfirm.js.php');
 <?php
 //		VAR			TYPE	OPTIONAL FLAGS	VALIDATION	EXCEPTION
 	$fields=array(
-		'sysmapid'=>		array(T_ZBX_INT, O_OPT,	P_SYS|P_NZERO,	DB_ID,		NULL),
-		'fullscreen'=>		array(T_ZBX_INT, O_OPT,	P_SYS,		IN('0,1'),	NULL),
+		'sysmapid'=>	array(T_ZBX_INT, O_OPT,	P_SYS|P_NZERO,	DB_ID,		NULL),
+		GET_PARAM_NAME=>		array(T_ZBX_STR, O_OPT,	P_SYS,		null,		null),
+		'fullscreen'=>	array(T_ZBX_INT, O_OPT,	P_SYS,		IN('0,1'),	NULL),
 //ajax
 		'favobj'=>		array(T_ZBX_STR, O_OPT, P_ACT,	NULL,			NULL),
 		'favref'=>		array(T_ZBX_STR, O_OPT, P_ACT,  NOT_EMPTY,		NULL),
@@ -52,7 +55,6 @@ require_once('include/templates/scriptConfirm.js.php');
 		'state'=>		array(T_ZBX_INT, O_OPT, P_ACT,  NOT_EMPTY,		NULL),
 		'action'=>		array(T_ZBX_STR, O_OPT, P_ACT, 	IN("'add','remove'"),NULL)
 	);
-
 	check_fields($fields);
 
 ?>
@@ -84,16 +86,10 @@ require_once('include/templates/scriptConfirm.js.php');
 			}
 		}
 	}
-
 	if((PAGE_TYPE_JS == $page['type']) || (PAGE_TYPE_HTML_BLOCK == $page['type'])){
 		include_once('include/page_footer.php');
 		exit();
 	}
-
-	$_REQUEST['sysmapid'] = get_request('sysmapid', CProfile::get('web.maps.sysmapid', 0));
-
-	$map_wdgt = new CWidget('hat_maps');
-	$table = new CTable(S_NO_MAPS_DEFINED, 'map');
 
 	$options = array(
 		'output' => API_OUTPUT_EXTEND,
@@ -101,65 +97,90 @@ require_once('include/templates/scriptConfirm.js.php');
 		'expand_urls' => true,
 		'select_selements' => API_OUTPUT_EXTEND,
 	);
-	$icon = $fs_icon = null;
 	$maps = CMap::get($options);
 	$maps = zbx_toHash($maps, 'sysmapid');
-	if(!empty($maps)){
-		if(!isset($maps[$_REQUEST['sysmapid']])){
+
+	if($name = get_request(GET_PARAM_NAME)){
+		unset($_REQUEST['sysmapid']);
+
+		foreach($maps as $map){
+			if(strcmp($map['name'], $name) == 0){
+				$_REQUEST['sysmapid'] = $map['sysmapid'];
+			}
+		}
+	}
+	else if(!isset($_REQUEST['sysmapid'])){
+		$_REQUEST['sysmapid'] = CProfile::get('web.maps.sysmapid');
+		if(is_null($_REQUEST['sysmapid'])){
 			$first_map = reset($maps);
 			$_REQUEST['sysmapid'] = $first_map['sysmapid'];
 		}
-		CProfile::update('web.maps.sysmapid', $_REQUEST['sysmapid'], PROFILE_TYPE_ID);
-
-
-		$form = new CForm(null, 'get');
-		$form->addVar('fullscreen', $_REQUEST['fullscreen']);
-		$cmbMaps = new CComboBox('sysmapid', get_request('sysmapid', 0), 'submit()');
-		order_result($maps, 'name');
-		foreach($maps as $sysmapid => $map){
-			$cmbMaps->addItem($sysmapid, get_node_name_by_elid($sysmapid, null, ': ').$map['name']);
-		}
-		$form->addItem($cmbMaps);
-
-		$map_wdgt->addHeader($maps[$_REQUEST['sysmapid']]['name'], $form);
-
-// GET MAP PARENT MAPS {{{
-		$parent_maps = array();
-		foreach($maps as $sysmapid => $map){
-			foreach($map['selements'] as $enum => $selement){
-				if(($selement['elementid'] == $_REQUEST['sysmapid']) && ($selement['elementtype'] == SYSMAP_ELEMENT_TYPE_MAP)){
-					$parent_maps[] = SPACE.SPACE;
-					$parent_maps[] = new Clink($map['name'], 'maps.php?sysmapid='.$map['sysmapid'].'&fullscreen='.$_REQUEST['fullscreen']);
-					break;
-				}
-			}
-		}
-
-		if(!empty($parent_maps)){
-			array_unshift($parent_maps, S_UPPER_LEVEL_MAPS.':');
-			$map_wdgt->addHeader($parent_maps);
-		}
-// }}} GET MAP PARENT MAPS
-
-		$action_map = getActionMapBySysmap($maps[$_REQUEST['sysmapid']]);
-
-		$table->addRow($action_map);
-
-		$imgMap = new CImg('map.php?sysmapid='.$_REQUEST['sysmapid']);
-		$imgMap->setMap($action_map->getName());
-		$table->addRow($imgMap);
-
-		$icon = get_icon('favourite', array(
-			'fav' => 'web.favorite.sysmapids',
-			'elname' => 'sysmapid',
-			'elid' => $_REQUEST['sysmapid'],
-		));
-		$fs_icon = get_icon('fullscreen', array('fullscreen' => $_REQUEST['fullscreen']));
 	}
 
-	$map_wdgt->addItem($table);
-	$map_wdgt->addPageHeader(S_NETWORK_MAPS_BIG, array($icon, $fs_icon));
-	$map_wdgt->show();
+
+	if(!(isset($_REQUEST['sysmapid']) && isset($maps[$_REQUEST['sysmapid']]))){
+		show_error_message(_('No permissions or map does not exist.'));
+	}
+	else{
+		$map_wdgt = new CWidget('hat_maps');
+		$table = new CTable(S_NO_MAPS_DEFINED, 'map');
+
+		$icon = $fs_icon = null;
+
+		if(!empty($maps)){
+	// no profile record when get by name
+			if(!isset($_REQUEST[GET_PARAM_NAME]))
+				CProfile::update('web.maps.sysmapid', $_REQUEST['sysmapid'], PROFILE_TYPE_ID);
+
+			$form = new CForm(null, 'get');
+			$form->addVar('fullscreen', $_REQUEST['fullscreen']);
+			$cmbMaps = new CComboBox('sysmapid', get_request('sysmapid', 0), 'submit()');
+			order_result($maps, 'name');
+			foreach($maps as $sysmapid => $map){
+				$cmbMaps->addItem($sysmapid, get_node_name_by_elid($sysmapid, null, ': ').$map['name']);
+			}
+			$form->addItem($cmbMaps);
+
+			$map_wdgt->addHeader($maps[$_REQUEST['sysmapid']]['name'], $form);
+
+	// GET MAP PARENT MAPS {{{
+			$parent_maps = array();
+			foreach($maps as $sysmapid => $map){
+				foreach($map['selements'] as $enum => $selement){
+					if(($selement['elementid'] == $_REQUEST['sysmapid']) && ($selement['elementtype'] == SYSMAP_ELEMENT_TYPE_MAP)){
+						$parent_maps[] = SPACE.SPACE;
+						$parent_maps[] = new Clink($map['name'], 'maps.php?sysmapid='.$map['sysmapid'].'&fullscreen='.$_REQUEST['fullscreen']);
+						break;
+					}
+				}
+			}
+
+			if(!empty($parent_maps)){
+				array_unshift($parent_maps, S_UPPER_LEVEL_MAPS.':');
+				$map_wdgt->addHeader($parent_maps);
+			}
+	// }}} GET MAP PARENT MAPS
+
+			$action_map = getActionMapBySysmap($maps[$_REQUEST['sysmapid']]);
+
+			$table->addRow($action_map);
+
+			$imgMap = new CImg('map.php?sysmapid='.$_REQUEST['sysmapid']);
+			$imgMap->setMap($action_map->getName());
+			$table->addRow($imgMap);
+
+			$icon = get_icon('favourite', array(
+				'fav' => 'web.favorite.sysmapids',
+				'elname' => 'sysmapid',
+				'elid' => $_REQUEST['sysmapid'],
+			));
+			$fs_icon = get_icon('fullscreen', array('fullscreen' => $_REQUEST['fullscreen']));
+		}
+
+		$map_wdgt->addItem($table);
+		$map_wdgt->addPageHeader(S_NETWORK_MAPS_BIG, array($icon, $fs_icon));
+		$map_wdgt->show();
+	}
 ?>
 <?php
 include_once('include/page_footer.php');
