@@ -60,6 +60,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.5rc1
 
+ - [ZBXNEXT-612] added mapname url parameter for monitoring->maps (Vedmak)
  - [ZBX-886] remove duplicate translation strings (Richlv)
  - [ZBX-3384] fixed server crash in a distributed monitoring setup with PostgreSQL (asaveljevs)
  - [ZBX-3274] fixed SQLite3 semaphore errors while starting server or proxy (Sasha)
